Bug 152992 - Regularly selecting a textbox instead of entering it (Impress)
Summary: Regularly selecting a textbox instead of entering it (Impress)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: All All
: medium normal
Assignee: Sarper Akdemir (allotropia)
URL:
Whiteboard: target:24.2.0 target:7.6.0.2
Keywords:
Depends on:
Blocks: Textbox
  Show dependency treegraph
 
Reported: 2023-01-12 14:02 UTC by Telesto
Modified: 2023-07-24 18:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample (53.63 KB, application/vnd.oasis.opendocument.presentation)
2023-01-12 14:02 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2023-01-12 14:02:37 UTC
Description:
Regularly selecting a textbox instead of entering it (Impress)

Steps to Reproduce:
1. Open the attached file
2. Click somewhere on around the glyphs of 'area' (yellow highlighted-> Cursor in text (fine)
3. Press ESC
4. Instead of clicking exactly on glyph, click above area (glyphs), but within the highlighted area -> textbox get selected

* PowerPoint sees each click inside a textbox as entering the textbox. (as I would expect)
* You mostly entering/exiting textboxes to make edits. You're less often moving the whole textbox (you like don't want to either). So the selecting whole textbox is not only annoying while editing, but also risk modifying the position of the textbox


Actual Results:
If you click exactly on glyph, the textbox will be entered. If you're more sloppy, like me,  you select the textbox (as whole), instead of entering

Expected Results:
Click inside the text, you enter the textbox, no matter where.
Click on the outer border to drag


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 12e8d57e791bb1befc0716d4d02af7d1d1ccb4ae
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL threaded
Comment 1 Telesto 2023-01-12 14:02:50 UTC
Created attachment 184612 [details]
Sample
Comment 2 QA Administrators 2023-02-12 03:21:14 UTC Comment hidden (obsolete)
Comment 3 Buovjaga 2023-03-24 15:07:13 UTC
This changed in 4.4 intentionally with 961ed635515a346a4395b4abf29675e121ddd8ab
show pointer_move arrow when passing over an object boundary

which removes the guessing you have to do when trying to find the edge of a
pres_obj in impress after text has been filled in and there is no visible
border anymore

Telesto: I don't agree with you that this behaviour is problematic. It is better than the old one. The hit area for selecting the box object is smaller than the area to focus inside the text.

Adding UX team, I propose to close this as wontfix.
Comment 4 Heiko Tietze 2023-03-27 09:41:10 UTC
Can we make this a duplicate of bug 154409?
Comment 5 Buovjaga 2023-03-27 09:54:14 UTC
(In reply to Heiko Tietze from comment #4)
> Can we make this a duplicate of bug 154409?

It's not the same, that one is for Writer and for objects inside a frame while this is for Impress and text boxes.
Comment 6 Heiko Tietze 2023-03-27 10:34:53 UTC
(In reply to Heiko Tietze from bug 154409 comment #3)
> If the frame contains text you definitely want to edit it rather than moving
> things around. We have a large number of tickets around this topic some use
> cases demand for quick editing other for the opposite (your shape with
> caption example).
> 
> A possible solution is to have a design vs. edit modus that needs to be
> switched manually (where per button or per double click). We could also
> define a (larger) range/area/zone around the frame that wouldn't go into the
> edit mode but key here is the feedback as most users would click in the
> middle of the object to move. I imagine some bluish highlighting of the the
> frame activation zone on hover.

Please follow the comments on the sibling ticket.
Comment 7 Sarper Akdemir (allotropia) 2023-07-19 15:03:56 UTC
I have prepared a patch for this at: https://gerrit.libreoffice.org/c/core/+/154640

It is the middle ground of the discussion here, increasing the tolerance of getting a cursor in the textbox with quick edit - making it more forgiving.

It doesn't implement each click inside a textbox as entering the textbox, just adds some horizontal tolerance around the text. Replicating how it already behaves when text is being edited to begin with.
Comment 8 Commit Notification 2023-07-20 23:38:14 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2c8c436c4a8546276e285dd18f3f7ded091a2c4e

tdf#152992: for Impress/Draw add horizontal hit tolerance for quick text edit

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-07-21 16:26:29 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2acfc1448facebd254bda18b2bf286a29be636a7

related tdf#152992: rename HitTolerance to HitTolerancePerAxis

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-07-21 16:26:32 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3dc2f4f0d2a8a7c51d01d29fd55ca9e4e6926596

related tdf#152992: fix minor logic error in hittestprocessor2d

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-07-22 21:43:59 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/79669ba9f03230de616a631e85f9dd6cb7ef117a

tdf#152992: for Impress/Draw add horizontal hit tolerance for quick text edit

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-07-24 07:15:20 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/8224430181eb2255edcb8e73f892313ce9c37168

related tdf#152992: rename HitTolerance to HitTolerancePerAxis

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-07-24 07:27:23 UTC
Sarper Akdemir committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/9ee472895bbebe7d753e37879ec987b07cd11a2c

related tdf#152992: fix minor logic error in hittestprocessor2d

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.